2001-03-17  Peter Cucka <pcucka@anim.dreamworks.com>

	* pxl-outline.c: Adding some explicit casts of boolean 
	expressions to 'bool's, to keep the IRIX compiler from 
	warning about an "enumerated type mixed with another type". 
	(Logged by Masatake)
	
2001-03-16  Masatake YAMATO  <yamato@redhat.com>

	Applied a patch from Martin.
	Message-ID: <3AB12888.E31072DC@gmx.net>.
	* output-emf.c: Now I fixed a bug in output-emf.c and 
	adopted it so that the generated emf files are compatible 
	to CorelDraw 9.

2001-03-15  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Added --with-magick and --without-magick
	flags to configure.
	Check ImageMagick version.

	--with-magick and --without-magick are suggested by
	"Stewart C. Russell" <stewart@ref.collins.co.uk>.

2001-03-14  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Check zlib.
	Print the required version of libpng. Suggested by 
	Martin. Message-ID: <3AABC7D4.1E7CDAA@gmx.net>.

2001-03-13  Masatake YAMATO  <yamato@redhat.com>

	Applied a patch from Martin.
	Message-ID: <3AAD4C14.6072AD3C@gmx.net>.
	
	* input-magick.c (magick_load_image): Improved supports
	for various version of libmagick.

2001-03-13  Masatake YAMATO  <yamato@redhat.com>

	Applied a patch from Martin.
	Message-ID: <3AAD4C65.AB2EAF23@gmx.net>.
	
	* autotrace.dsp: Updated. Reduced the size of the exe file 
	without reducing speed.

2001-03-12  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.h: Added copyright notice.
	* types.h: Likewise.

	* Makefile.am (INCLUDES): Renamed from libautotrace_a_INCLUDES.
	Suggested by Martin.

	* HACKING: Write about releasing scheme.

	Updated by Martin.
	Message-ID: <3AAB952E.7A1CE3A9@gmx.net>.
	* autotrace.dsp: updated.

2001-03-11  Masatake YAMATO  <yamato@redhat.com>

	* input-png.c: Added arguments for png_get_color_type.

2001-03-09  Masatake YAMATO  <yamato@redhat.com>

	Applied a patch from Martin.
	Message-ID: <3AA7F19A.C11E5BC2@gmx.net>.
	* autotrace.dsp: Updated.
